--- a/src/components/UI/InputField/InputField.module.css
+++ b/src/components/UI/InputField/InputField.module.css
@@ -9,7 +9,7 @@
   .inputs {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    justify-content: space-around;
+    justify-content: space-between;
   }
 }
 
